Clinical Report - Test Results of a Single Test Completed

--- a/src/main/webapp/reportLab/lab_summeries_index.xhtml
+++ b/src/main/webapp/reportLab/lab_summeries_index.xhtml
@@ -79,6 +79,12 @@
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Daily Summary Inward and Opd Count" action="report_investigation_summery_by_inward_opd_count"/>
                                 </p:panelGrid>
                             </p:tab>
+                             <p:tab title="Clinical" >
+                                <p:panelGrid columns="1" styleClass="alignTop">
+                                    <p:commandButton styleClass="linkButton" ajax="false" value="Test Results - Single" action="test_results_single"/> 
+                                
+                                </p:panelGrid>
+                            </p:tab>
                         </p:tabView>
 
 
