--- a/src/main/webapp/bill_reprint.xhtml
+++ b/src/main/webapp/bill_reprint.xhtml
@@ -24,6 +24,8 @@
                                                          return false;"/>
                         </p:panelGrid>
 
+                        <h1>#{sessionController.loggedPreference.opdBillPaperType}</h1>
+                        
                         <p:panelGrid columns="2" styleClass="alignTop" >
                             <p:panel header="Bill" >
                                 <p:panelGrid columns="1" >
